--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
-    "babel-eslint": "^10.1.0",
+    "@types/ember": "^3.16.0",
+    "@types/ember-data": "^3.16.1",
+    "@types/ember-qunit": "^3.4.9",
+    "@types/ember__test-helpers": "^1.7.0",
+    "@types/qunit": "^2.9.1",
+    "@types/rsvp": "^4.0.3",
+    "babel-eslint": "^8.2.6",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.19.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.20.5",
@@ -33,8 +38,11 @@
     "ember-cli-htmlbars": "^5.1.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-typescript": "^4.0.0-alpha.1",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.19.0",
+    "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
@@ -49,7 +57,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "typescript": "^3.9.5"
   },
   "engines": {
     "node": "10.* || >= 12"
